src/objects/Booth__c.object
<CustomObject>
    <description>Boothforce;This is a demo station or exhibit that needs staffing; This is use by Sarah Steck;</description>
    <fields>
        <fullName>Area_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Area on the trade show floor where the Booth is located</description>
        <inlineHelpText>The Area on the trade show floor where the Booth is located</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area_Zone__c</referenceTo>
        <relationshipLabel>Booths</relationshipLabel>
        <relationshipName>Booths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booth_Description__c</fullName>
        <description>Description of what will be shown or demonstrated at this particular booth</description>
        <inlineHelpText>Description of what will be shown or demonstrated at this particular booth</inlineHelpText>
        <label>Booth Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Booth_Type__c</fullName>
        <description>The function of the Booth</description>
        <inlineHelpText>The function of the Booth</inlineHelpText>
        <label>Booth Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Station</fullName>
                </value>
                <value>
                    <fullName>Success Clinic</fullName>
                </value>
                <value>
                    <fullName>Shift Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Shifts_to_be_Staffed__c</fullName>
        <formula>Total_Shifts_to_be_Staffed__c - Total_Shifts_Staffed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Shifts to be Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Shifts_Staffed__c</fullName>
        <description>Number of Shifts currently Staffed for this Booth</description>
        <inlineHelpText>Number of Shifts currently Staffed for this Booth</inlineHelpText>
        <label>Total Shifts Staffed</label>
        <summarizedField>Staffing_Assignment__c.Is_Staffed__c</summarizedField>
        <summaryForeignKey>Staffing_Assignment__c.Booth__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Shifts_to_be_Staffed__c</fullName>
        <label>Total Shifts to be Staffed</label>
        <summaryForeignKey>Staffing_Assignment__c.Booth__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Booth_Staff__c</fullName>
        <inlineHelpText>This dictates what users will be allowed to sign up for this Booth.</inlineHelpText>
        <label>User Booth Staffing Roles Allowed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Organizer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>A logical or physical grouping of Booths that share a common theme.</description>
        <inlineHelpText>A logical or physical grouping of Booths that share a common theme.</inlineHelpText>
        <label>Zone</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Booth</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_Zone__c</columns>
        <columns>Zone__c</columns>
        <columns>Booth_Type__c</columns>
        <columns>Booth_Description__c</columns>
        <columns>Total_Shifts_to_be_Staffed__c</columns>
        <columns>Total_Shifts_Staffed__c</columns>
        <columns>Remaining_Shifts_to_be_Staffed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Booths</label>
    </listViews>
    <nameField>
        <label>Booth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>